finalizo, de nuevo, el resumen del primer y segundo libro.

--- a/lp01.md
+++ b/lp01.md
@@ -2,3 +2,16 @@
 
 el niño ........ **larry** 
 *internet explorer*
+asdfghuioppoiuydfsfghjkl
+hgfvdcsxadfghhgwfgcxfv 
+fsw45yjnbvcs345tyhnbvcsertgbvc**ytgfdsa**v
+  **REfew*
+  -gfdsa- 
+  
+  
+  #hola
+  fghkl
+  *hgfds*
+  **hgfdsafghgf**
+  
+  
